--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center mt-5">
-  <form method="POST" action="/reurl">
+  <form method="POST" action="/">
     <div class="mb-3" style="width: 50em;">
       <input class="form-control" type="url" name="url" placeholder="Input URL here..." id="url" required>
     </div>
